relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-44.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@password:remove|my_password_123": {
    "type": "string",
    "value": null
  },
  "_meta": {
    "@password:remove|my_password_123": {
      "value": {
        "": {
          "rem": [
            [
              "@password:remove",
              "x"
            ]
          ]
        }
      }
    }
  }
}
