relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-45.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@password:replace|my_password_123": {
    "type": "string",
    "value": "[password]"
  },
  "_meta": {
    "@password:replace|my_password_123": {
      "value": {
        "": {
          "rem": [
            [
              "@password:replace",
              "s",
              0,
              10
            ]
          ],
          "len": 15
        }
      }
    }
  }
}
