relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-46.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@password:mask|my_password_123": {
    "type": "string",
    "value": "***************"
  },
  "_meta": {
    "@password:mask|my_password_123": {
      "value": {
        "": {
          "rem": [
            [
              "@password:mask",
              "m",
              0,
              15
            ]
          ],
          "len": 15
        }
      }
    }
  }
}
