relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-49.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@bearer:remove|Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@bearer:remove|Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9": {
      "value": {
        "": {
          "rem": [
            [
              "@bearer:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 43
        }
      }
    }
  }
}
