relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-50.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@bearer:mask|Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9": {
    "type": "string",
    "value": "*******************************************"
  },
  "_meta": {
    "@bearer:mask|Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9": {
      "value": {
        "": {
          "rem": [
            [
              "@bearer:mask",
              "m",
              0,
              43
            ]
          ],
          "len": 43
        }
      }
    }
  }
}
