relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-7.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@email:remove|test@example.com": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@email:remove|test@example.com": {
      "value": {
        "": {
          "rem": [
            [
              "@email:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 16
        }
      }
    }
  }
}
