relay-server/src/processing/logs/snapshots/relay_server__processing__logs__process__tests__scrub_log_pii_string_rules-8.snap
---
source: relay-server/src/processing/logs/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@email:mask|test@example.com": {
    "type": "string",
    "value": "****************"
  },
  "_meta": {
    "@email:mask|test@example.com": {
      "value": {
        "": {
          "rem": [
            [
              "@email:mask",
              "m",
              0,
              16
            ]
          ],
          "len": 16
        }
      }
    }
  }
}
